# ChangeLog for dev-java/jgraph
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jgraph/ChangeLog,v 1.16 2007/02/28 18:01:00 blubb Exp $

  28 Feb 2007; Simon Stelling <blubb@gentoo.org> jgraph-5.9.2.0.ebuild:
  stable on amd64; bug 154366

  18 Feb 2007; nixnut <nixnut@gentoo.org> jgraph-5.9.2.0.ebuild:
  Stable on ppc wrt bug 154366

  29 Dec 2006; <fauli@gentoo.org> jgraph-5.9.2.0.ebuild:
  stable on x86, bug #154366

  12 Oct 2006; Vlastimil Babka <caster@gentoo.org> jgraph-5.9.2.0.ebuild:
  Fixed typo for source USE flag, thanks to Matthias Langer <mlangc@gmx.at> in
  bug #129638 for pointing out.

*jgraph-5.9.2.0 (11 Oct 2006)

  11 Oct 2006; Vlastimil Babka <caster@gentoo.org> +jgraph-5.9.2.0.ebuild:
  Version bump wrt bug #129638, migrated to gen-2 eclasses, added source and
  examples USE flags.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> jgraph-3.2.ebuild:
  Dropping sparc keywords, see #96229

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> jgraph-3.2.ebuild:
  stable on amd64

  03 Nov 2004; Thomas Matthijs <axxo@gentoo.org> jgraph-3.2.ebuild:
  depend on app-arch/unzip

  22 Oct 2004; Dylan Carlson <absinthe@gentoo.org> jgraph-3.2.ebuild:
  Keywords ~amd64.

  17 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jgraph-3.2.ebuild:
  keyword x86

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jgraph-3.2.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

  05 May 2004; <SeJo@gentoo.org> jgraph-3.2.ebuild:
  added ~ppc keyword

*jgraph-3.2 (01 Apr 2004)

  01 Apr 2004; Chris Aniszczyk <zx@gentoo.org> jgraph-3.1.ebuild,
  jgraph-3.2.ebuild:
  Version bump and clean up. Closes #46006

*jgraph-3.1 (15 Feb 2004)

  15 Feb 2004; Chris Aniszczyk <zx@gentoo.org> jgraph-3.1.ebuild:
  Initial Import.
  Thanks to Stanislas Nanchen <stan@hood.ch> for the suggestion. Bug #30578
