@@ -1,5 +1,9 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST jgraph-3.2-java1.4-src.zip 940879 RMD160 77beca10c6611102939a07138ffccc8306855964 SHA1 d95bb5b026063dbff50bb4cc8315541614fc50e5 SHA256 993d7b7ec0c49e316a0b02fd0cc01306fa687ae487a29b55b591748f32fcdbb4
 DIST jgraph-5.9.2.0-lgpl-src.jar 3606678 RMD160 bc10db6621e47b19d0252ca66fa91145a772a190 SHA1 9edcb962a877871d574da63aeeb262277bfce978 SHA256 d3a59ba56bc5facb6b9b732d44a8f986589191164c244c4a705b6810190c3689
+DIST jgraph-5.9.2.1-lgpl-src.jar 3608194 RMD160 5cab2a467ac5a7b07d6e23a1acbdd263a79ef77d SHA1 cb0ec5c205f9f464abfef8b86debf911502c5a1b SHA256 f7521de126fce14c892ab4d42e05dab7faf38667e609d34a5428a3fb50140048
 EBUILD jgraph-3.2.ebuild 851 RMD160 34e53b964fec3b7d15ccae2e5bbb1546043d63d8 SHA1 8f4ab255822c5edea58975082a9ab167b13a0bdd SHA256 518d0107a3725aec12b047619402af282c5673617e044742468f1af13c33a9b1
 MD5 8356e4080c8de77fb0526a80bb74c3fa jgraph-3.2.ebuild 851
 RMD160 34e53b964fec3b7d15ccae2e5bbb1546043d63d8 jgraph-3.2.ebuild 851
@@ -8,10 +12,14 @@ EBUILD jgraph-5.9.2.0.ebuild 1134 RMD160 adfbcc176190003cc6b4d5f634ca4afb9f61bf8
 MD5 7e16fa6ba31206b40afb20c60c134259 jgraph-5.9.2.0.ebuild 1134
 RMD160 adfbcc176190003cc6b4d5f634ca4afb9f61bf86 jgraph-5.9.2.0.ebuild 1134
 SHA256 2b2f9fb9f98072b488d729ec321cbb3018dbd8c2793547b9dc4ea813fd6fcc2b jgraph-5.9.2.0.ebuild 1134
-MISC ChangeLog 1942 RMD160 9fcec55880dd9d1e5fab5a9995e809adcc5f78cd SHA1 c4ea4c49b735304914bbffec0be46cf664118e20 SHA256 8e9c998954f12f7d09ff6e4cb3b07dd80688fdfd4dd46ede9900759f69c6e3d7
-MD5 42fc94eb5f31913759580dd83e046339 ChangeLog 1942
-RMD160 9fcec55880dd9d1e5fab5a9995e809adcc5f78cd ChangeLog 1942
-SHA256 8e9c998954f12f7d09ff6e4cb3b07dd80688fdfd4dd46ede9900759f69c6e3d7 ChangeLog 1942
+EBUILD jgraph-5.9.2.1.ebuild 1054 RMD160 36ff0d109e01a99d77b5067de9e58b80b2717091 SHA1 3e76d2d28b074737b87853ac13ea551d1128d43a SHA256 08d70826941d39d95ea4469ecb5793cfe3fbd544360f367c99938ff9d555a3e5
+MD5 4137e2a94d52854e53d51ed3a082d016 jgraph-5.9.2.1.ebuild 1054
+RMD160 36ff0d109e01a99d77b5067de9e58b80b2717091 jgraph-5.9.2.1.ebuild 1054
+SHA256 08d70826941d39d95ea4469ecb5793cfe3fbd544360f367c99938ff9d555a3e5 jgraph-5.9.2.1.ebuild 1054
+MISC ChangeLog 2072 RMD160 2def0ff71495c6de58fcfef7ab6d33b98b4b4fb2 SHA1 22a668a43d3fc3b907959aadb37a951e95cc13cd SHA256 9855b9e261fac6b82411842eedcd7f781a3c00065182df4ae8b49ce1605c9d26
+MD5 2ff1f862261fef7101278d8425864f40 ChangeLog 2072
+RMD160 2def0ff71495c6de58fcfef7ab6d33b98b4b4fb2 ChangeLog 2072
+SHA256 9855b9e261fac6b82411842eedcd7f781a3c00065182df4ae8b49ce1605c9d26 ChangeLog 2072
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
@@ -22,3 +30,13 @@ SHA256 0dd8223cdefa4303700ec69a60ee5f91ff27b6f1f80b6fa14644d9ff57ed32fc files/di
 MD5 980e8fc262c31301307ef2ba9848d1df files/digest-jgraph-5.9.2.0 265
 RMD160 031eb6ccd73e775a1ba17fe8d50e7e707a55896b files/digest-jgraph-5.9.2.0 265
 SHA256 bce62d7da6696a087e2a896a268c7700b1406b38af78b6c21d8097f717f43d4a files/digest-jgraph-5.9.2.0 265
+MD5 1bfe1e9a92a27dd4cc5aa5988dcb3504 files/digest-jgraph-5.9.2.1 265
+RMD160 bb4c650e53fb978443124d2646449c652dcf68e7 files/digest-jgraph-5.9.2.1 265
+SHA256 633fb360b06e202ef6a0dc73840ce9baaaa93c443fe7ba5879a1f42e9972def0 files/digest-jgraph-5.9.2.1 265
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFGN1pMcxLzpIGCsLQRAqlbAJ9vg0iMz2wy57hIctwLUX8nn7sSQACgiMIB
+6l4VoGYW5PyVkL73k9nIwho=
+=CyHc
+-----END PGP SIGNATURE-----
