@@ -1,0 +1,3 @@
+MD5 32c1a16991c84d9e00b0eacc6a62663a jgraph-5.9.2.1-lgpl-src.jar 3608194
+RMD160 5cab2a467ac5a7b07d6e23a1acbdd263a79ef77d jgraph-5.9.2.1-lgpl-src.jar 3608194
+SHA256 f7521de126fce14c892ab4d42e05dab7faf38667e609d34a5428a3fb50140048 jgraph-5.9.2.1-lgpl-src.jar 3608194
